# shittyrustchat

./: Cargo.toml
src/: main.rs
templates/: chat-container.html  chat.html  hello.html  index.html  inner.html  nested-for.html  page.html  start.html
